src/test/deca/context/invalid/our_tests/jb-wrong-param.deca
// Description:
//    Wrong parameter type
//
// Resultats:
//    Should throw a Contextual error (rule 2.9)
//
// Historique:
//    cree le 22/01/2017

class A {
    void f(void a) {}
}
